...
        Page(imageName: "cronometro", titleTex: "MOTIVATE YOURSELF", subText: "With a break", descriptionText: "Pomodoro is a technique wich divide\n focus within minutes. Perfect for start to study or\n work in home."),
        Page(imageName: "lista", titleTex: "GET YOUR THINGS DONE", subText: "Inside your app", descriptionText: "You can insert a task and start your timer,\n or just set the timer on. You can delete them when you're fishined!")
    ]
    
    private let previousButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("PREV", for: .normal)
        button.titleLabel?.font = .boldSystemFont(ofSize: 14)
        button.setTitleColor(.gray, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(handlePrev), for: .touchUpInside)
        return button
    }()
...
        pageControls.currentPage = prevIndex
        collectionView?.scrollToItem(at: indexPath, at: .centeredHorizontally, animated: true)
    }
    
    private let nextButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("NEXT", for: .normal)
        button.titleLabel?.font = .boldSystemFont(ofSize: 14)
        button.setTitleColor(.systemPink, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(handleNext), for: .touchUpInside)
        return button
    }()
...
